@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+December 7, 2011
+- [mickael] deactivate tests about class0 files with number of components greater to 1
+
 November 19, 2011
 * [vincent] fix compilation of libopenjpip (libcurl dependency) with CMake. Credit to Winfried.
 
